tests/ui/intrinsics/const-eval-select-stability.stderr
error: `const_eval_select` is not yet stable as a const fn
  --> $DIR/const-eval-select-stability.rs:17:5
   |
LL |     const_eval_select((), nothing, log);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions
   = note: use of unstable library feature `const_eval_select`
   = note: see issue #124625 <https://github.com/rust-lang/rust/issues/124625> for more information

error: aborting due to 1 previous error

